--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "name": "api-shopping-list",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "API Shopping list",
   "license": "MIT",
   "author": "Antoine Aumjaud",
   "scripts": {
     "build-config": "./build-config.sh",
-    "debug":     "npm run build-config && node --inspect src/server.js",
-    "start":     "npm run build-config && node    src/server.js",
-    "start-mon": "npm run build-config && nodemon src/server.js",
+    "debug":     "npm run build-config && cd src && node --inspect server.js",
+    "start":     "npm run build-config && cd src && node    server.js",
+    "start-mon": "npm run build-config && cd src && nodemon server.js",
     "test":      "npm run build-config && jasmine --config=test/jasmine.json"
   },
   "main": "src/server.js",
   "repository": "https://github.com/antoine-aumjaud/api-shopping-list",
   "dependencies": {
+    "api-nodelib": "antoine-aumjaud/api-nodelib#master",
     "body-parser": "^1.17.2",
-    "express": "^4.15.3",
-    "fs": "^0.0.1-security"
+    "express": "^4.15.3"
   },
   "devDependencies": {
     "jasmine": "^2.6.0"
