:wrench::bug: fix compile error

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "author": "Antoine Aumjaud",
   "scripts": {
-    "build-config": "build-config.sh",
+    "build-config": "./build-config.sh",
     "debug": "npm run build-config && cd src && node --inspect server.js",
     "start": "npm run build-config && cd src && node    server.js",
     "start-mon": "npm run build-config && cd src && nodemon server.js",
